# AxefighterVillager

./: Cargo.toml  cargo skyline build --release.bat  cargo skyline build --releaseold.bat
src/: lib.rs
src/lucina/: mod.rs
src/lucina/acmd/: attackdash.rs  mod.rs
src/murabito/: mod.rs
src/murabito/acmd/: attackdash.rs  attackjab.rs  downspecial.rs  mod.rs  smashes.rs  treeaxehitthingidk.rs
src/murabito/acmd/aerials/: attackairb.rs  attackairf.rs  attackairhi.rs  attackairlw.rs  attackairn.rs  mod.rs
src/murabito/acmd/smashes/: attackhi4.rs  attacklw4.rs  attacks4.rs  mod.rs
src/murabito/acmd/tilts/: attack3s.rs  attackhi3.rs  attacklw3.rs  attacks3.rs  mod.rs
src/murabito/bullet/: acmd.rs  mod.rs
